# geometry-calculator-mcp

./: README.md  pyproject.toml
examples/: claude-desktop-config.example.json  continue-mcp-server.example.json  http-sse-client.example.json  http-streamable-client.example.json
src/geometry_calculator_mcp/: __init__.py  __main__.py  expression.py  geometry.py  server.py  types.py  units.py
tests/: test_geometry_tools.py  test_math_tools.py
