[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geometry-calculator-mcp"
version = "0.1.0"
description = "Calculation-only MCP server for deterministic 2D geometry sketch helpers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.scripts]
geometry-calculator-mcp = "geometry_calculator_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
